snuqs/compiler/qasm3/generated/Qasm3Parser.py
# Generated from Qasm3Parser.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class Qasm3Parser ( Parser ):

    grammarFileName = "Qasm3Parser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'OPENQASM'", "'include'", "'defcalgrammar'", 
                     "'def'", "'cal'", "'defcal'", "'gate'", "'extern'", 
                     "'box'", "'let'", "'break'", "'continue'", "'if'", 
                     "'else'", "'end'", "'return'", "'for'", "'while'", 
                     "'in'", "'switch'", "'case'", "'default'", "<INVALID>", 
                     "<INVALID>", "'input'", "'output'", "'const'", "'readonly'", 
                     "'mutable'", "'qreg'", "'qubit'", "'creg'", "'bool'", 
                     "'bit'", "'int'", "'uint'", "'float'", "'angle'", "'complex'", 
                     "'array'", "'void'", "'duration'", "'stretch'", "'gphase'", 
                     "'inv'", "'pow'", "'ctrl'", "'negctrl'", "'#dim'", 
                     "'durationof'", "'delay'", "'reset'", "'measure'", 
                     "'barrier'", "<INVALID>", "'['", "']'", "'{'", "'}'", 
                     "'('", "')'", "':'", "';'", "'.'", "','", "'='", "'->'", 
                     "'+'", "'++'", "'-'", "'*'", "'**'", "'/'", "'%'", 
                     "'|'", "'||'", "'&'", "'&&'", "'^'", "'@'", "'~'", 
                     "'!'", "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'im'" ]

    symbolicNames = [ "<INVALID>", "OPENQASM", "INCLUDE", "DEFCALGRAMMAR", 
                      "DEF", "CAL", "DEFCAL", "GATE", "EXTERN", "BOX", "LET", 
                      "BREAK", "CONTINUE", "IF", "ELSE", "END", "RETURN", 
                      "FOR", "WHILE", "IN", "SWITCH", "CASE", "DEFAULT", 
                      "PRAGMA", "AnnotationKeyword", "INPUT", "OUTPUT", 
                      "CONST", "READONLY", "MUTABLE", "QREG", "QUBIT", "CREG", 
                      "BOOL", "BIT", "INT", "UINT", "FLOAT", "ANGLE", "COMPLEX", 
                      "ARRAY", "VOID", "DURATION", "STRETCH", "GPHASE", 
                      "INV", "POW", "CTRL", "NEGCTRL", "DIM", "DURATIONOF", 
                      "DELAY", "RESET", "MEASURE", "BARRIER", "BooleanLiteral", 
                      "LBRACKET", "RBRACKET", "LBRACE", "RBRACE", "LPAREN", 
                      "RPAREN", "COLON", "SEMICOLON", "DOT", "COMMA", "EQUALS", 
                      "ARROW", "PLUS", "DOUBLE_PLUS", "MINUS", "ASTERISK", 
                      "DOUBLE_ASTERISK", "SLASH", "PERCENT", "PIPE", "DOUBLE_PIPE", 
                      "AMPERSAND", "DOUBLE_AMPERSAND", "CARET", "AT", "TILDE", 
                      "EXCLAMATION_POINT", "EqualityOperator", "CompoundAssignmentOperator", 
                      "ComparisonOperator", "BitshiftOperator", "IMAG", 
                      "ImaginaryLiteral", "BinaryIntegerLiteral", "OctalIntegerLiteral", 
                      "DecimalIntegerLiteral", "HexIntegerLiteral", "Identifier", 
                      "HardwareQubit", "FloatLiteral", "TimingLiteral", 
                      "BitstringLiteral", "Whitespace", "Newline", "LineComment", 
                      "BlockComment", "VERSION_IDENTIFER_WHITESPACE", "VersionSpecifier", 
                      "ARBITRARY_STRING_WHITESPACE", "StringLiteral", "EAT_INITIAL_SPACE", 
                      "EAT_LINE_END", "RemainingLineContent", "CAL_PRELUDE_WHITESPACE", 
                      "CAL_PRELUDE_COMMENT", "DEFCAL_PRELUDE_WHITESPACE", 
                      "DEFCAL_PRELUDE_COMMENT", "CalibrationBlock" ]

    RULE_program = 0
    RULE_version = 1
    RULE_statement = 2
    RULE_annotation = 3
    RULE_scope = 4
    RULE_pragma = 5
    RULE_statementOrScope = 6
    RULE_calibrationGrammarStatement = 7
    RULE_includeStatement = 8
    RULE_breakStatement = 9
    RULE_continueStatement = 10
    RULE_endStatement = 11
    RULE_forStatement = 12
    RULE_ifStatement = 13
    RULE_returnStatement = 14
    RULE_whileStatement = 15
    RULE_switchStatement = 16
    RULE_switchCaseItem = 17
    RULE_barrierStatement = 18
    RULE_boxStatement = 19
    RULE_delayStatement = 20
    RULE_gateCallStatement = 21
    RULE_measureArrowAssignmentStatement = 22
    RULE_resetStatement = 23
    RULE_aliasDeclarationStatement = 24
    RULE_classicalDeclarationStatement = 25
    RULE_constDeclarationStatement = 26
    RULE_ioDeclarationStatement = 27
    RULE_oldStyleDeclarationStatement = 28
    RULE_quantumDeclarationStatement = 29
    RULE_defStatement = 30
    RULE_externStatement = 31
    RULE_gateStatement = 32
    RULE_assignmentStatement = 33
    RULE_expressionStatement = 34
    RULE_calStatement = 35
    RULE_defcalStatement = 36
    RULE_expression = 37
    RULE_aliasExpression = 38
    RULE_declarationExpression = 39
    RULE_measureExpression = 40
    RULE_rangeExpression = 41
    RULE_setExpression = 42
    RULE_arrayLiteral = 43
    RULE_indexOperator = 44
    RULE_indexedIdentifier = 45
    RULE_returnSignature = 46
    RULE_gateModifier = 47
    RULE_scalarType = 48
    RULE_qubitType = 49
    RULE_arrayType = 50
    RULE_arrayReferenceType = 51
    RULE_designator = 52
    RULE_defcalTarget = 53
    RULE_defcalArgumentDefinition = 54
    RULE_defcalOperand = 55
    RULE_gateOperand = 56
    RULE_externArgument = 57
    RULE_argumentDefinition = 58
    RULE_argumentDefinitionList = 59
    RULE_defcalArgumentDefinitionList = 60
    RULE_defcalOperandList = 61
    RULE_expressionList = 62
    RULE_identifierList = 63
    RULE_gateOperandList = 64
    RULE_externArgumentList = 65

    ruleNames =  [ "program", "version", "statement", "annotation", "scope", 
                   "pragma", "statementOrScope", "calibrationGrammarStatement", 
                   "includeStatement", "breakStatement", "continueStatement", 
                   "endStatement", "forStatement", "ifStatement", "returnStatement", 
                   "whileStatement", "switchStatement", "switchCaseItem", 
                   "barrierStatement", "boxStatement", "delayStatement", 
                   "gateCallStatement", "measureArrowAssignmentStatement", 
                   "resetStatement", "aliasDeclarationStatement", "classicalDeclarationStatement", 
                   "constDeclarationStatement", "ioDeclarationStatement", 
                   "oldStyleDeclarationStatement", "quantumDeclarationStatement", 
                   "defStatement", "externStatement", "gateStatement", "assignmentStatement", 
                   "expressionStatement", "calStatement", "defcalStatement", 
                   "expression", "aliasExpression", "declarationExpression", 
                   "measureExpression", "rangeExpression", "setExpression", 
                   "arrayLiteral", "indexOperator", "indexedIdentifier", 
                   "returnSignature", "gateModifier", "scalarType", "qubitType", 
                   "arrayType", "arrayReferenceType", "designator", "defcalTarget", 
                   "defcalArgumentDefinition", "defcalOperand", "gateOperand", 
                   "externArgument", "argumentDefinition", "argumentDefinitionList", 
                   "defcalArgumentDefinitionList", "defcalOperandList", 
                   "expressionList", "identifierList", "gateOperandList", 
                   "externArgumentList" ]

    EOF = Token.EOF
    OPENQASM=1
    INCLUDE=2
    DEFCALGRAMMAR=3
    DEF=4
    CAL=5
    DEFCAL=6
    GATE=7
    EXTERN=8
    BOX=9
    LET=10
    BREAK=11
    CONTINUE=12
    IF=13
    ELSE=14
    END=15
    RETURN=16
    FOR=17
    WHILE=18
    IN=19
    SWITCH=20
    CASE=21
    DEFAULT=22
    PRAGMA=23
    AnnotationKeyword=24
    INPUT=25
    OUTPUT=26
    CONST=27
    READONLY=28
    MUTABLE=29
    QREG=30
    QUBIT=31
    CREG=32
    BOOL=33
    BIT=34
    INT=35
    UINT=36
    FLOAT=37
    ANGLE=38
    COMPLEX=39
    ARRAY=40
    VOID=41
    DURATION=42
    STRETCH=43
    GPHASE=44
    INV=45
    POW=46
    CTRL=47
    NEGCTRL=48
    DIM=49
    DURATIONOF=50
    DELAY=51
    RESET=52
    MEASURE=53
    BARRIER=54
    BooleanLiteral=55
    LBRACKET=56
    RBRACKET=57
    LBRACE=58
    RBRACE=59
    LPAREN=60
    RPAREN=61
    COLON=62
    SEMICOLON=63
    DOT=64
    COMMA=65
    EQUALS=66
    ARROW=67
    PLUS=68
    DOUBLE_PLUS=69
    MINUS=70
    ASTERISK=71
    DOUBLE_ASTERISK=72
    SLASH=73
    PERCENT=74
    PIPE=75
    DOUBLE_PIPE=76
    AMPERSAND=77
    DOUBLE_AMPERSAND=78
    CARET=79
    AT=80
    TILDE=81
    EXCLAMATION_POINT=82
    EqualityOperator=83
    CompoundAssignmentOperator=84
    ComparisonOperator=85
    BitshiftOperator=86
    IMAG=87
    ImaginaryLiteral=88
    BinaryIntegerLiteral=89
    OctalIntegerLiteral=90
    DecimalIntegerLiteral=91
    HexIntegerLiteral=92
    Identifier=93
    HardwareQubit=94
    FloatLiteral=95
    TimingLiteral=96
    BitstringLiteral=97
    Whitespace=98
    Newline=99
    LineComment=100
    BlockComment=101
    VERSION_IDENTIFER_WHITESPACE=102
    VersionSpecifier=103
    ARBITRARY_STRING_WHITESPACE=104
    StringLiteral=105
    EAT_INITIAL_SPACE=106
    EAT_LINE_END=107
    RemainingLineContent=108
    CAL_PRELUDE_WHITESPACE=109
    CAL_PRELUDE_COMMENT=110
    DEFCAL_PRELUDE_WHITESPACE=111
    DEFCAL_PRELUDE_COMMENT=112
    CalibrationBlock=113

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(Qasm3Parser.EOF, 0)

        def version(self):
            return self.getTypedRuleContext(Qasm3Parser.VersionContext,0)


        def statementOrScope(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Qasm3Parser.StatementOrScopeContext)
            else:
                return self.getTypedRuleContext(Qasm3Parser.StatementOrScopeContext,i)


        def getRuleIndex(self):
            return Qasm3Parser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = Qasm3Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==1:
                self.state = 132
                self.version()


            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1512644325007671292) != 0) or ((((_la - 70)) & ~0x3f) == 0 and ((1 << (_la - 70)) & 268179457) != 0):
                self.state = 135
                self.statementOrScope()
                self.state = 140
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 141
            self.match(Qasm3Parser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VersionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPENQASM(self):
            return self.getToken(Qasm3Parser.OPENQASM, 0)

        def VersionSpecifier(self):
            return self.getToken(Qasm3Parser.VersionSpecifier, 0)

        def SEMICOLON(self):
            return self.getToken(Qasm3Parser.SEMICOLON, 0)

        def getRuleIndex(self):
            return Qasm3Parser.RULE_version

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVersion" ):
                listener.enterVersion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVersion" ):
                listener.exitVersion(self)




    def version(self):

        localctx = Qasm3Parser.VersionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_version)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self.match(Qasm3Parser.OPENQASM)
            self.state = 144
            self.match(Qasm3Parser.VersionSpecifier)
            self.state = 145
            self.match(Qasm3Parser.SEMICOLON)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def pragma(self):
            return self.getTypedRuleContext(Qasm3Parser.PragmaContext,0)


        def aliasDeclarationStatement(self):
            return self.getTypedRuleContext(Qasm3Parser.AliasDeclarationStatementContext,0)


        def assignmentStatement(self):
            return self.getTypedRuleContext(Qasm3Parser.AssignmentStatementContext,0)


        def barrierStatement(self):
            return self.getTypedRuleContext(Qasm3Parser.BarrierStatementContext,0)


        def boxStatement(self):
            return self.getTypedRuleContext(Qasm3Parser.BoxStatementContext,0)


        def breakStatement(self):
            return self.getTypedRuleContext(Qasm3Parser.BreakStatementContext,0)


        def calStatement(self):
            return self.getTypedRuleContext(Qasm3Parser.CalStatementContext,0)


        def calibrationGrammarStatement(self):
            return self.getTypedRuleContext(Qasm3Parser.CalibrationGrammarStatementContext,0)


        def classicalDeclarationStatement(self):
            return self.getTypedRuleContext(Qasm3Parser.ClassicalDeclarationStatementContext,0)


        def constDeclarationStatement(self):
            return self.getTypedRuleContext(Qasm3Parser.ConstDeclarationStatementContext,0)


        def continueStatement(self):
            return self.getTypedRuleContext(Qasm3Parser.ContinueStatementContext,0)


        def defStatement(self):
            return self.getTypedRuleContext(Qasm3Parser.DefStatementContext,0)


        def defcalStatement(self):
            return self.getTypedRuleContext(Qasm3Parser.DefcalStatementContext,0)


        def delayStatement(self):
            return self.getTypedRuleContext(Qasm3Parser.DelayStatementContext,0)


        def endStatement(self):
            return self.getTypedRuleContext(Qasm3Parser.EndStatementContext,0)


        def expressionStatement(self):
            return self.getTypedRuleContext(Qasm3Parser.ExpressionStatementContext,0)


        def externStatement(self):
            return self.getTypedRuleContext(Qasm3Parser.ExternStatementContext,0)


        def forStatement(self):
            return self.getTypedRuleContext(Qasm3Parser.ForStatementContext,0)


        def gateCallStatement(self):
            return self.getTypedRuleContext(Qasm3Parser.GateCallStatementContext,0)


        def gateStatement(self):
            return self.getTypedRuleContext(Qasm3Parser.GateStatementContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(Qasm3Parser.IfStatementContext,0)


        def includeStatement(self):
            return self.getTypedRuleContext(Qasm3Parser.IncludeStatementContext,0)


        def ioDeclarationStatement(self):
            return self.getTypedRuleContext(Qasm3Parser.IoDeclarationStatementContext,0)


        def measureArrowAssignmentStatement(self):
            return self.getTypedRuleContext(Qasm3Parser.MeasureArrowAssignmentStatementContext,0)


        def oldStyleDeclarationStatement(self):
            return self.getTypedRuleContext(Qasm3Parser.OldStyleDeclarationStatementContext,0)


        def quantumDeclarationStatement(self):
            return self.getTypedRuleContext(Qasm3Parser.QuantumDeclarationStatementContext,0)


        def resetStatement(self):
            return self.getTypedRuleContext(Qasm3Parser.ResetStatementContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(Qasm3Parser.ReturnStatementContext,0)


        def switchStatement(self):
            return self.getTypedRuleContext(Qasm3Parser.SwitchStatementContext,0)


        def whileStatement(self):
            return self.getTypedRuleContext(Qasm3Parser.WhileStatementContext,0)


        def annotation(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Qasm3Parser.AnnotationContext)
            else:
                return self.getTypedRuleContext(Qasm3Parser.AnnotationContext,i)


        def getRuleIndex(self):
            return Qasm3Parser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = Qasm3Parser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 185
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [23]:
                self.enterOuterAlt(localctx, 1)
                self.state = 147
                self.pragma()
                pass
            elif token in [2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 15, 16, 17, 18, 20, 24, 25, 26, 27, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 42, 43, 44, 45, 46, 47, 48, 50, 51, 52, 53, 54, 55, 60, 70, 81, 82, 88, 89, 90, 91, 92, 93, 94, 95, 96, 97]:
                self.enterOuterAlt(localctx, 2)
                self.state = 151
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==24:
                    self.state = 148
                    self.annotation()
                    self.state = 153
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 183
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                if la_ == 1:
                    self.state = 154
                    self.aliasDeclarationStatement()
                    pass

                elif la_ == 2:
                    self.state = 155
                    self.assignmentStatement()
                    pass

                elif la_ == 3:
                    self.state = 156
                    self.barrierStatement()
                    pass

                elif la_ == 4:
                    self.state = 157
                    self.boxStatement()
                    pass

                elif la_ == 5:
                    self.state = 158
                    self.breakStatement()
                    pass

                elif la_ == 6:
                    self.state = 159
                    self.calStatement()
                    pass

                elif la_ == 7:
                    self.state = 160
                    self.calibrationGrammarStatement()
                    pass

                elif la_ == 8:
                    self.state = 161
                    self.classicalDeclarationStatement()
                    pass

                elif la_ == 9:
                    self.state = 162
                    self.constDeclarationStatement()
                    pass

                elif la_ == 10:
                    self.state = 163
                    self.continueStatement()
                    pass

                elif la_ == 11:
                    self.state = 164
                    self.defStatement()
                    pass

                elif la_ == 12:
                    self.state = 165
                    self.defcalStatement()
                    pass

                elif la_ == 13:
                    self.state = 166
                    self.delayStatement()
                    pass

                elif la_ == 14:
                    self.state = 167
                    self.endStatement()
                    pass

                elif la_ == 15:
                    self.state = 168
                    self.expressionStatement()
                    pass

                elif la_ == 16:
                    self.state = 169
                    self.externStatement()
                    pass

                elif la_ == 17:
                    self.state = 170
                    self.forStatement()
                    pass

                elif la_ == 18:
                    self.state = 171
                    self.gateCallStatement()
                    pass

                elif la_ == 19:
                    self.state = 172
                    self.gateStatement()
                    pass

                elif la_ == 20:
                    self.state = 173
                    self.ifStatement()
                    pass

                elif la_ == 21:
                    self.state = 174
                    self.includeStatement()
                    pass

                elif la_ == 22:
                    self.state = 175
                    self.ioDeclarationStatement()
                    pass

                elif la_ == 23:
                    self.state = 176
                    self.measureArrowAssignmentStatement()
                    pass

                elif la_ == 24:
                    self.state = 177
                    self.oldStyleDeclarationStatement()
                    pass

                elif la_ == 25:
                    self.state = 178
                    self.quantumDeclarationStatement()
                    pass

                elif la_ == 26:
                    self.state = 179
                    self.resetStatement()
                    pass

                elif la_ == 27:
                    self.state = 180
                    self.returnStatement()
                    pass

                elif la_ == 28:
                    self.state = 181
                    self.switchStatement()
                    pass

                elif la_ == 29:
                    self.state = 182
                    self.whileStatement()
                    pass


                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AnnotationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AnnotationKeyword(self):
            return self.getToken(Qasm3Parser.AnnotationKeyword, 0)

        def RemainingLineContent(self):
            return self.getToken(Qasm3Parser.RemainingLineContent, 0)

        def getRuleIndex(self):
            return Qasm3Parser.RULE_annotation

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAnnotation" ):
                listener.enterAnnotation(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAnnotation" ):
                listener.exitAnnotation(self)




    def annotation(self):

        localctx = Qasm3Parser.AnnotationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_annotation)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 187
            self.match(Qasm3Parser.AnnotationKeyword)
            self.state = 189
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==108:
                self.state = 188
                self.match(Qasm3Parser.RemainingLineContent)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ScopeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(Qasm3Parser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(Qasm3Parser.RBRACE, 0)

        def statementOrScope(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(Qasm3Parser.StatementOrScopeContext)
            else:
                return self.getTypedRuleContext(Qasm3Parser.StatementOrScopeContext,i)


        def getRuleIndex(self):
            return Qasm3Parser.RULE_scope

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterScope" ):
                listener.enterScope(self)
